#19 Подготовка графики и текстовых стилей «Барбершопа»
1. Подготовьте графику «Барбершопа»
Из представленных исходников макетов нарежьте изображения для
«Барбершопа»:
контентные изображения (например, фото товаров или галереи),
декоративные изображения (например, мелкие иконки),
фоновые изображения (например, фон главной, текстура светлых блоков).
Используйте для изображений подходящие форматы.
Подготовленные изображения разместите в подпапке img в папке проекта.

2. Подготовьте текстовые стили «Барбершопа»
Создайте файл style.css в подпапке css в папке проекта. В этом файле
пропишите для body и для заголовков двух типов текстовые стили:
размер шрифта,
высоту строки,
цвет шрифта,
жирность шрифта,
гарнитуру (название шрифта).
Задавать текстовые стили для всех элементов не нужно, достаточно трёх
CSS-правил.
Подключать нестандартный шрифт к странице не нужно.

3. Подключите изображения и стили к разметке
После выполнения предыдущих шагов у вас должна получиться примерно такая
структура проекта:
barbershop
| – css
|      style.css
| – img
|      [картинки]
|   index.html
|   catalog.html
|   catalog-item.html
Подключите контентные изображения и файл стилей в создаваемую разметку.
Подключение фонов и декоративных изображений — не нужно.
При подключении ресурсов используйте относительные адреса. Например:
<link href="css/style.css" rel="stylesheet">
<img src="img/logo.png" width="100" height="50" alt="Барбершоп">

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -12,7 +12,7 @@
 			<nav class="header-menu">
 				<ul>
 					<li>
-						<a href="index.html" title="Главная страница"><img src="http://placehold.it/150x100" alt="logo" width="150" height="100"></a>
+						<a href="index.html" title="Главная страница"><img src="img/header-logo.png" alt="Барбершоп главная" width="111" height="24"></a>
 					</li>
 					<li>
 						<a href="#" title="Информация">Информация</a>
@@ -47,13 +47,13 @@
 		<section class="product">
 			<div class="product-picture-list">
 				<figure class="pruduct-picture">
-					<img src="http://placehold.it/300x400" alt="" width="300" height="400">
+					<img src="img/product_main.png" alt="" width="489" height="527">
 				</figure>
 				<section class="pruduct-gallery">
 					<ul class="pruduct-gallery-list">
-						<li class="pruduct-gallery-item"><img src="http://placehold.it/150x100" alt="" width="150" height="100"></li>
-						<li class="pruduct-gallery-item"><img src="http://placehold.it/150x100" alt="" width="150" height="100"></li>
-						<li class="pruduct-gallery-item"><img src="http://placehold.it/150x100" alt="" width="150" height="100"></li>
+						<li class="pruduct-gallery-item"><img src="img/product_galery_1.png" alt="" width="169" height="178"></li>
+						<li class="pruduct-gallery-item"><img src="img/product_galery_2.png" alt="" width="169" height="178"></li>
+						<li class="pruduct-gallery-item"><img src="img/product_galery_3.png" alt="" width="169" height="178"></li>
 					</ul>
 				</section>	
 			</div>
