--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 			<nav class="header-menu">
 				<ul>
 					<li>
-						<a href="index.html" title="Главная страница"><img src="http://placehold.it/150x100" alt="logo" width="150" height="100"></a>
+						<a href="index.html" title="Главная страница"><img src="img/header-logo.png" alt="Барбершоп главная" width="111" height="24"></a>
 					</li>
 					<li>
 						<a href="#" title="Информация">Информация</a>
@@ -64,7 +64,7 @@
 				<li class="product-item">
 					<article class="product">
 						<figure class="product-image">
-							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
+							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="img/catalog_1.png" alt="Набор для путешествий Baxter of California" width="220" height="165"></a>
 						</figure>
 						<a href="catalog-item.html" title="Перейти на страницу товара" class="product-title">
 							<p>Набор для путешествий</p>
@@ -79,7 +79,7 @@
 				<li class="product-item">
 					<article class="product">
 						<figure class="product-image">
-							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
+							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="img/catalog_2.png" alt="Набор для путешествий Baxter of California" width="220" height="165"></a>
 						</figure>
 						<a href="catalog-item.html" title="Перейти на страницу товара" class="product-title">
 							<p>Увлажняющий кондиционер</p>
@@ -94,7 +94,7 @@
 				<li class="product-item">
 					<article class="product">
 						<figure class="product=image">
-							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
+							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="img/catalog_3.png" alt="Набор для путешествий Baxter of California" width="220" height="165"></a>
 						</figure>
 						<a href="catalog-item.html" title="Перейти на страницу товара" class="product-title">
 							<p>Гель для волос</p>
@@ -109,7 +109,7 @@
 				<li class="product-item">
 					<article class="product">
 						<figure class="product-image">
-							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
+							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="img/catalog_4.png" alt="Набор для путешествий Baxter of California" width="220" height="165"></a>
 						</figure>
 						<a href="catalog-item.html" title="Перейти на страницу товара" class="product-title">
 							<p>Глина для укладки волос</p>
@@ -124,7 +124,7 @@
 				<li class="product-item">
 					<article class="product">
 						<figure class="product-image">
-							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
+							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="img/catalog_5.png" alt="Набор для путешествий Baxter of California" width="220" height="165"></a>
 						</figure>
 						<a href="catalog-item.html" title="Перейти на страницу товара" class="product-title">
 							<p>Гель для волос</p>
@@ -139,7 +139,7 @@
 				<li class="product-item">
 					<article class="product">
 						<figure class="product-image">
-							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of California" width="150" height="100"></a>
+							<a href="catalog-item.html" title="Перейти на страницу товара"><img src="img/catalog_6.png" alt="Набор для путешествий Baxter of California" width="220" height="165"></a>
 						</figure>
 						<a href="catalog-item.html" title="Перейти на страницу товара" class="product-title">
 							<p>Набор для бритья</p>
