--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
     <main class="container">
       <div class="index-logo">
-        <img src="img/index-logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
+        <img src="img/logo.png" width="368" height="204" alt="Барбершоп «Бородинский»">
       </div>
       <section class="features">
         <div class="features-item">
@@ -53,7 +53,7 @@
       </section>
       <div class="index-content">
         <div class="index-content-left">
-          <h2 class="index-content-title">Новости</h2>
+          <h1 class="index-content-title">Новости</h1>
           <ul class="news-preview">
             <li>
               <p>Нам наконец завезли Ягермайстер! Теперь вы можете пропустить стаканчик во время стрижки</p>
@@ -67,10 +67,10 @@
           <a class="btn" href="#">Все новости</a>
         </div>
         <div class="index-content-right">
-          <h2 class="index-content-title">Фотогалерея</h2>
+          <h1 class="index-content-title">Фотогалерея</h1>
           <div class="gallery">
             <figure class="gallery-content">
-              <img src="img/photo-1.jpg" width="286" height="164" alt="">
+              <img src="img/galery.jpg" width="286" height="164" alt="">
             </figure>
             <button class="btn gallery-prev" type="button">Назад</button>
             <button class="btn gallery-next" type="button">Вперёд</button>
@@ -79,7 +79,7 @@
       </div>
       <div class="index-content">
         <div class="index-content-left">
-          <h2 class="index-content-title">Контактная информация</h2>
+          <h1 class="index-content-title">Контактная информация</h1>
           <p>
             Барбершоп «Бородинский»<br>
             Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
@@ -94,7 +94,7 @@
           <a class="btn" href="#">Обратная связь</a>
         </div>
         <div class="index-content-right">
-          <h2 class="index-content-title">Записаться</h2>
+          <h1 class="index-content-title">Записаться</h1>
           <p>Укажите желаемую дату и время и мы свяжемся с вами для подтверждения брони</p>
           <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
             <input type="text" name="date" value="" placeholder="Дата">
