--- a/catalog-item.html
+++ b/catalog-item.html
@@ -24,7 +24,7 @@
 						<a href="#" title="Прайс-лист">Прайс-лист</a>
 					</li>
 					<li>
-						<a href="#" title="Магазин" class="active">Магазин</a>
+						<a href="#" title="Магазин">Магазин</a>
 					</li>
 					<li>
 						<a href="#" title="Контакты">Контакты</a>
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 	</header>
-	<main class="body">
+	<main class="container">
 		<h1>Средства для ухода</h1>
 		<ul class="breadcrumbs">
 			<li><a href="#" title="Главная">Главная</a></li>
@@ -47,17 +47,17 @@
 		<section class="product">
 			<div class="product-picture-list">
 				<figure class="pruduct-picture">
-					<img src="img/product_main.png" alt="" width="489" height="527">
+					<img src="img/product_main.png" alt="" width="460" height="527">
 				</figure>
 				<section class="pruduct-gallery">
 					<ul class="pruduct-gallery-list">
-						<li class="pruduct-gallery-item"><img src="img/product_galery_1.png" alt="" width="169" height="178"></li>
-						<li class="pruduct-gallery-item"><img src="img/product_galery_2.png" alt="" width="169" height="178"></li>
-						<li class="pruduct-gallery-item"><img src="img/product_galery_3.png" alt="" width="169" height="178"></li>
+						<li class="pruduct-gallery-item"><img src="img/product_galery_1.png" alt="" width="160" height="160"></li>
+						<li class="pruduct-gallery-item"><img src="img/product_galery_2.png" alt="" width="160" height="160"></li>
+						<li class="pruduct-gallery-item"><img src="img/product_galery_3.png" alt="" width="160" height="160"></li>
 					</ul>
 				</section>	
 			</div>
-			<section class="product">
+			<section class="product-info">
 				<div class="product-availability">
 					Есть в наличии
 					<div class="product-identity">
@@ -66,8 +66,8 @@
 				</div>
 				<p class="product-title">Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
 				<div class="price-wrapper">
-					<div class="product-price"></div>
-					<a href="" class="product-buy-btn"></a>
+					<span class="product-price">2900 РУБ.</span>
+					<a href="#" class="product-buy-btn">Купить</a>
 				</div>
 				<section class="product-content">
 					<ul>
@@ -80,26 +80,26 @@
 				</section>
 			</section>
 		</section>
-		<footer class="footer">
-			<div class="conteiner">
-				<section class="footer-contacts">
-					Барбершоп &laquo;Бородинский&raquo;<br>
-					Адрес: г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-					<a href="#" title="Как нас найти">Как нас найти?</a><br>
-					Телефон: <a href="tel:+7(906)666-66-66" title="Как нас найти">+7 (906) 666-66-66</a><br>
-				</section>
-				<section class="footer-soccial">
-					<p>Давайте дружить!</p>
-					<a href="#" class="soccial-btn social-btn-vk">Вконтакте</a>
-		          	<a href="#" class="soccial-btn social-btn-fb">Фейсбук</a>
-		          	<a href="#" class="soccial-btn social-btn-inst">Инстаграм</a>
-				</section>
-				<section class="footer-copyright">
-					<p>Разработано:</p>
-         			<a href="https://htmlacademy.ru" title="Перейти на сайт HTML Academy" class="copyright-link">HTML Academy</a>
-				</section>
-			</div>
-		</footer>
 	</main>
+	<footer class="footer">
+		<div class="container">
+			<section class="footer-contacts">
+				Барбершоп &laquo;Бородинский&raquo;<br>
+				Адрес: г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+				<a href="#" title="Как нас найти">Как нас найти?</a><br>
+				Телефон: <a href="tel:+7(906)666-66-66" title="Как нас найти">+7 (906) 666-66-66</a><br>
+			</section>
+			<section class="footer-soccial">
+				<p>Давайте дружить!</p>
+				<a href="#" class="soccial-btn social-btn-vk">Вконтакте</a>
+	          	<a href="#" class="soccial-btn social-btn-fb">Фейсбук</a>
+	          	<a href="#" class="soccial-btn social-btn-inst">Инстаграм</a>
+			</section>
+			<section class="footer-copyright">
+				<p>Разработано:</p>
+       			<a href="https://htmlacademy.ru" title="Перейти на сайт HTML Academy" class="copyright-link">HTML Academy</a>
+			</section>
+		</div>
+	</footer>
 </body>
 </html>
