--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 	</header>
-	<main class="body">
+	<main class="container">
 		<h1>Средства для ухода</h1>
 		<ul  class="breadcrumbs">
 			<li><a href="#" title="Главная">Главная</a></li>
@@ -73,8 +73,8 @@
 							</h2>
 						</a>
 						<div class="price-wrapper">
-							<span class="product-price"></span>
-							<a href="#" class="product-buy-btn"></a>
+							<span class="product-price">2900 РУБ.</span>
+							<a href="#" class="product-buy-btn">Купить</a>
 						</div>
 					</article>
 				</li>
@@ -90,8 +90,8 @@
 							</h2>
 						</a>
 						<div class="price-wrapper">
-							<span class="product-price"></span>
-							<a href="#" class="product-buy-btn"></a>
+							<span class="product-price">750 РУБ.</span>
+							<a href="#" class="product-buy-btn">Купить</a>
 						</div>
 					</article>
 				</li>
@@ -107,8 +107,8 @@
 							</h2>
 						</a>
 						<div class="price-wrapper">
-							<span class="product-price"></span>
-							<a href="#" class="product-buy-btn"></a>
+							<span class="product-price">290 РУБ.</span>
+							<a href="#" class="product-buy-btn">Купить</a>
 						</div>
 					</article>
 				</li>
@@ -124,8 +124,8 @@
 							</h2>
 						</a>
 						<div class="price-wrapper">
-							<span class="product-price"></span>
-							<a href="#" class="product-buy-btn"></a>
+							<span class="product-price">500 РУБ.</span>
+							<a href="#" class="product-buy-btn">Купить</a>
 						</div>
 					</article>
 				</li>
@@ -141,8 +141,8 @@
 							</h2>
 						</a>
 						<div class="price-wrapper">
-							<span class="product-price"></span>
-							<a href="#" class="product-buy-btn"></a>
+							<span class="product-price">300 РУБ.</span>
+							<a href="#" class="product-buy-btn">Купить</a>
 						</div>
 					</article>
 				</li>
@@ -158,15 +158,15 @@
 							</h2>
 						</a>
 						<div class="price-wrapper">
-							<span class="product-price"></span>
-							<a href="#" class="product-buy-btn"></a>
+							<span class="product-price">3900 РУБ.</span>
+							<a href="#" class="product-buy-btn">Купить</a>
 						</div>
 					</article>
 				</li>
 			</ul>
 			<section class="pagination">
 				<a href="#" title="Перейти на страницу">1</a>
-				<a title="Перейти на страницу">2</a>
+				<a title="Перейти на страницу" class="active">2</a>
 				<a href="#" title="Перейти на страницу">3</a>
 				<a href="#" title="Перейти на страницу">4</a>
 			</section>
