--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="background">
   <header class="header">
     <div class="container">
       <nav class="header-menu">
@@ -107,7 +107,7 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="conteiner">
+      <div class="container">
         <section class="footer-contacts">
           Барбершоп &laquo;Бородинский&raquo;<br>
           Адрес: г.Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
